Fix for CTA buttons that were too long for mobile

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -86,6 +86,19 @@ section + section {
 	margin: 60px 0;
 }
 
+.desktop-only {
+  display: none;
+  @media #{$mid-point} {
+    display: inline;
+  }
+}
+.mobile-only {
+  display: inline;
+  @media #{$mid-point} {
+    display: none!important;
+  }
+}
+
 .page h2 {
 	text-align: center;
 }
